Настроил типографику, кнопки

--- a/src/scss/variables/global.scss
+++ b/src/scss/variables/global.scss
@@ -7,7 +7,7 @@
 }
 
 html {
-  --main-color: var(--secondary-9);
+  --main-color: var(--black);
   --bg-color: var(--bg-main);
   --header-color: var(--white);
 
