--- a/src/scss/variables/UI.scss
+++ b/src/scss/variables/UI.scss
@@ -36,7 +36,8 @@ button {
   color: var(--color);
   text-align: center;
   text-decoration: none;
-  letter-spacing: -0.02em;
+  // letter-spacing: -0.02em;
+  letter-spacing: 0;
   cursor: pointer;
   background-color: var(--bg-color);
   border-color: var(--border-color);
