Сделал шапку. Десктоп.

--- a/src/modules/sections/header.hbs
+++ b/src/modules/sections/header.hbs
@@ -1,8 +1,64 @@
 <!-- header -->
 <header class="header">
   <div class="container">
-    <!-- wrap -->
-    <div class="header__wrap"> </div>
+    <!-- header__wrap -->
+    <div class="header__wrap">
+
+      <!-- header__logo -->
+      <a href="#" class="header__logo">
+        <img src="img/logo.svg" alt="Белая река Даховская">
+      </a>
+      <!-- ./ End of .header__logo -->
+
+      <!-- header__nav -->
+      <nav class="header__nav header-nav">
+        <ul class="header-nav__list">
+          <li class="header-nav__item">
+            <a href="#" class="header-nav__link">О комплексе</a>
+          </li>
+          <li class="header-nav__item">
+            <a href="#" class="header-nav__link">Схема комплекса</a>
+          </li>
+          <li class="header-nav__item">
+            <a href="#" class="header-nav__link">Услуги</a>
+          </li>
+          <li class="header-nav__item">
+            <a href="#" class="header-nav__link">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- ./ End of .header__nav -->
+
+      <!-- header__contacts -->
+      <div class="header__contacts">
+
+        <!-- header__social-wrap -->
+        <div class="header__social-wrap">
+          <a href="mailto:info@turbr.ru" class="header__social">
+            <svg>
+              <use xlink:href="svg/sprite.svg#message"></use>
+            </svg>
+            <span>info@turbr.ru</span>
+          </a>
+          <a href="https://wa.me/88005509180" class="header__social">
+            <svg>
+              <use xlink:href="svg/sprite.svg#whatsapp"></use>
+            </svg>
+            <span>WhatsApp</span>
+          </a>
+        </div>
+        <!-- ./ End of header__social-wrap -->
+
+        <div class="header__phone">
+          <a href="tel:88005509180">8 800 550 91 80</a>
+          <span>по России бесплатно</span>
+        </div>
+
+        <button class="header__button button">Забронировать</button>
+
+      </div>
+      <!-- ./ End of .header__contacts -->
+    </div>
     <!-- ./ End of wrap -->
   </div>
 </header>
