Начал card-room

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,6 +17,7 @@
 // Components - Компоненты
 @import 'components/dropdown';
 @import 'components/modal';
+@import 'components/card-room';
 
 // Sections - Секции
 @import 'sections/header';
