--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <title>{{ title }}</title>
-  </head>
-  <body>
-    <div class="content">
-      {{> sections/header }}
 
-      <main>
-        <h1>{{ title }}</h1>
-      </main>
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <title>{{ title }}</title>
+</head>
 
-      {{> sections/footer }}
-    </div>
-  </body>
+<body>
+  <div class="content">
+    {{> sections/header }}
+
+    <main>
+      <h1>{{ title }}</h1>
+
+      {{> components/card-room }}
+    </main>
+
+    {{> sections/footer }}
+  </div>
+</body>
+
 </html>
