Доработки в секции offers и блоке card-offer

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,10 +18,12 @@
 @import 'components/dropdown';
 @import 'components/modal';
 @import 'components/card-room';
+@import 'components/card-offer';
 
 // Sections - Секции
 @import 'sections/header';
 @import 'sections/footer';
+@import 'sections/offers';
 
 // Themes - Темы
 @import 'themes/default';
