--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,9 +13,10 @@
   <div class="content">
     {{> sections/header }}
 
-    <main>
-      <h1>{{ title }}</h1>
 
+    <main>
+      {{> sections/offers }}
+      <hr>
       {{> components/card-room }}
     </main>
 
