Сделал секцию about и блок card-about

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,13 +17,15 @@
 // Components - Компоненты
 @import 'components/dropdown';
 @import 'components/modal';
-@import 'components/card-room';
 @import 'components/card-offer';
+@import 'components/card-about';
+@import 'components/card-room';
 
 // Sections - Секции
 @import 'sections/header';
 @import 'sections/footer';
 @import 'sections/offers';
+@import 'sections/about';
 
 // Themes - Темы
 @import 'themes/default';
