--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -17,6 +17,7 @@
     <main>
       {{> sections/offers }}
       <hr>
+      {{> sections/about }}
       {{> components/card-room }}
     </main>
 
