Убрал вертикальные отступы у заголовков h1 - h6

--- a/src/scss/variables/typography.scss
+++ b/src/scss/variables/typography.scss
@@ -19,7 +19,7 @@ html {
 
 h1,
 .h1 {
-  margin: $h-one-margin;
+  // margin: $h-one-margin;
   font-family: $h-one-font;
   font-size: $h-one-font-size;
   font-weight: $h-one-font-weight;
@@ -32,7 +32,7 @@ h1,
 }
 h2,
 .h2 {
-  margin: $h-two-margin;
+  // margin: $h-two-margin;
   font-family: $h-two-font;
   font-size: $h-two-font-size;
   font-weight: $h-two-font-weight;
@@ -45,7 +45,7 @@ h2,
 }
 h3,
 .h3 {
-  margin: $h-three-margin;
+  // margin: $h-three-margin;
   font-family: $h-three-font;
   font-size: $h-three-font-size;
   font-weight: $h-three-font-weight;
@@ -58,7 +58,7 @@ h3,
 }
 h4,
 .h4 {
-  margin: $h-four-margin;
+  // margin: $h-four-margin;
   font-family: $h-four-font;
   font-size: $h-four-font-size;
   font-weight: $h-four-font-weight;
@@ -71,7 +71,7 @@ h4,
 }
 h5,
 .h5 {
-  margin: $h-five-margin;
+  // margin: $h-five-margin;
   font-family: $h-five-font;
   font-size: $h-five-font-size;
   font-weight: $h-five-font-weight;
@@ -84,7 +84,7 @@ h5,
 }
 h6,
 .h6 {
-  margin: $h-six-margin;
+  // margin: $h-six-margin;
   font-family: $h-six-font;
   font-size: $h-six-font-size;
   font-weight: $h-six-font-weight;
