--- a/src/scss/variables/global.scss
+++ b/src/scss/variables/global.scss
@@ -23,6 +23,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 .content {
@@ -34,6 +35,7 @@ body {
 main {
   flex-grow: 1;
   background-color: var(--bg-color);
+  overflow-x: hidden;
 }
 
 .container {
