Добавил секцию services и блок card-service

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,12 +20,14 @@
 @import 'components/card-offer';
 @import 'components/card-about';
 @import 'components/card-room';
+@import 'components/card-service';
 
 // Sections - Секции
 @import 'sections/header';
 @import 'sections/footer';
 @import 'sections/offers';
 @import 'sections/about';
+@import 'sections/services';
 
 // Themes - Темы
 @import 'themes/default';
