--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -18,7 +18,9 @@
       {{> sections/offers }}
       <hr>
       {{> sections/about }}
-      {{> components/card-room }}
+
+      {{> sections/services }}
+
     </main>
 
     {{> sections/footer }}
