Разметка и начальная стилизация секции hero

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,6 +25,7 @@
 // Sections - Секции
 @import 'sections/header';
 @import 'sections/footer';
+@import 'sections/hero';
 @import 'sections/offers';
 @import 'sections/about';
 @import 'sections/services';
