--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -15,10 +15,10 @@
 
 
     <main>
-      {{> sections/offers }}
-      <hr>
-      {{> sections/about }}
 
+      {{> sections/hero }}
+      {{> sections/offers }}
+      {{> sections/about }}
       {{> sections/services }}
 
     </main>
