--- a/src/modules/sections/header.hbs
+++ b/src/modules/sections/header.hbs
@@ -1,6 +1,6 @@
 <!-- header -->
 <header class="header">
-  <div class="container">
+  <div class="container container--lg">
     <!-- header__wrap -->
     <div class="header__wrap">
 
