--- a/src/modules/components/card-room.hbs
+++ b/src/modules/components/card-room.hbs
@@ -2,7 +2,6 @@
   <div class="card-room__banner">
     <div class="card-room__slider">
       <div class="swiper">
-
         <div class="swiper-wrapper">
           <div class="card-room__slide swiper-slide">
             <div class="card-room__photo-wrap">
@@ -30,26 +29,24 @@
               </picture>
             </div>
           </div>
-
         </div>
       </div>
-
     </div>
   </div>
 
   <div class="card-room__content">
-
     <div class="card-room__info">
-      <div class="card-room__title">Двухместный стандарт — 20 номеров в домах срубах</div>
-      <a href="#" class="card-room__link">Показать на карте</a>
+      <div class="card-room__title">
+        Двухместный стандарт — 20 номеров в домах срубах
+      </div>
+      <a href="#" class="card-room__link"> Показать на карте </a>
     </div>
 
     <div class="card-room__total">
-      <div class="card-room__price">от 2 390 ₽</div>
-      <button class="card-room__button button">Забронировать</button>
+      <div class="card-room__price"> от 2 390 ₽ </div>
+      <button class="card-room__button button"> Забронировать </button>
     </div>
   </div>
   <!-- End card-room__content -->
-
 </div>
 <!-- End card-room -->
