--- a/src/modules/sections/hero.hbs
+++ b/src/modules/sections/hero.hbs
@@ -7,12 +7,16 @@
           <div class="swiper-slide">
             <div class="hero__slide">
               <div class="hero__banner">
-                <img src="img/hero-bg-1.jpg" alt="">
+                <img src="img/hero-bg-1.jpg" alt="" />
               </div>
               <div class="hero__info">
                 .<div class="container">
-                  <h1 class="hero__title h1">Туристический комплекс «Белая река Даховская»</h1>
-                  <p class="hero__descr">Увлекательный отдых в красочных горах Адыгеи</p>
+                  <h1 class="hero__title h1">
+                    Туристический комплекс «Белая река Даховская»
+                  </h1>
+                  <p class="hero__descr">
+                    Увлекательный отдых в красочных горах Адыгеи
+                  </p>
                 </div>
               </div>
             </div>
@@ -21,4 +25,5 @@
       </div>
     </div>
   </div>
-</section> <!-- ./ End of hero -->
+</section>
+<!-- ./ End of hero -->
