--- a/src/modules/sections/about.hbs
+++ b/src/modules/sections/about.hbs
@@ -1,8 +1,10 @@
 <!-- about -->
 <section class="about">
-  <div class="about__decor-title about__decor-title--top">Отдыых в горах</div>
+  <div class="about__decor-title about__decor-title--top"> Отдыых в горах </div>
   <div class="container container--lg">
     {{> components/card-about }}
-  </div> <!-- ./ End of container -->
-  <div class="about__decor-title about__decor-title--bottom">Адыгеи</div>
-</section> <!-- ./ End of about -->
+  </div>
+  <!-- ./ End of container -->
+  <div class="about__decor-title about__decor-title--bottom"> Адыгеи </div>
+</section>
+<!-- ./ End of about -->
