--- a/src/modules/sections/rooms.hbs
+++ b/src/modules/sections/rooms.hbs
@@ -2,17 +2,15 @@
 <section class="rooms">
   <div class="container container--lg">
     <div class="rooms__headline">
-      <h2>Номерной фонд</h2>
-      <a href="#">Карта-схема фонда</a>
+      <h2> Номерной фонд </h2>
+      <a href="#"> Карта-схема фонда </a>
     </div>
 
     <div class="rooms__wrapper">
-
       <div class="card-room">
         <div class="card-room__banner">
           <div class="card-room__slider">
             <div class="swiper">
-
               <div class="swiper-wrapper">
                 <div class="card-room__slide swiper-slide">
                   <div class="card-room__photo-wrap">
@@ -22,30 +20,29 @@
                     </picture>
                   </div>
                 </div>
-
               </div>
             </div>
-
           </div>
         </div>
 
         <div class="card-room__content">
-
           <div class="card-room__info">
-            <div class="card-room__title">Двухместный стандарт — 20 номеров в домах срубах</div>
-            <a href="#" class="card-room__link">Показать на карте</a>
+            <div class="card-room__title">
+              Двухместный стандарт — 20 номеров в домах срубах
+            </div>
+            <a href="#" class="card-room__link"> Показать на карте </a>
           </div>
 
           <div class="card-room__total">
-            <div class="card-room__price">от 2 390 ₽</div>
-            <button class="card-room__button button">Забронировать</button>
+            <div class="card-room__price"> от 2 390 ₽ </div>
+            <button class="card-room__button button"> Забронировать </button>
           </div>
         </div>
         <!-- End card-room__content -->
-
       </div>
       <!-- End card-room -->
-
     </div>
-  </div> <!-- ./ End of container -->
-</section> <!-- ./ End of rooms -->
+  </div>
+  <!-- ./ End of container -->
+</section>
+<!-- ./ End of rooms -->
