--- a/src/scss/components/card-service.scss
+++ b/src/scss/components/card-service.scss
@@ -37,22 +37,24 @@
       height: 100%;
 
       &::before {
-        content: '';
+        $lg-1: linear-gradient(
+          0deg,
+          rgba(0, 0, 0, 0.8) 0%,
+          rgba(0, 0, 0, 0) 52.68%
+        );
+        $lg-2: linear-gradient(
+          180deg,
+          rgba(227, 242, 255, 0.8) 0%,
+          rgba(205, 249, 255, 0) 21.83%
+        );
+
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(
-            0deg,
-            rgba(0, 0, 0, 0.8) 0%,
-            rgba(0, 0, 0, 0) 52.68%
-          ),
-          linear-gradient(
-            180deg,
-            rgba(227, 242, 255, 0.8) 0%,
-            rgba(205, 249, 255, 0) 21.83%
-          );
+        content: '';
+        background: $lg-1, $lg-2;
       }
     }
 
@@ -78,12 +80,12 @@
     margin-bottom: 16px;
 
     &::before {
-      counter-increment: service;
-      content: counter(service);
       z-index: 2;
       font-size: 1.5rem;
       line-height: 3;
       color: var(--primary-default);
+      content: counter(service);
+      counter-increment: service;
 
       // Вставка нуля перед счётчиком для первых 9-ти секций
       .services__item:nth-child(-n + 9) & {
@@ -97,33 +99,32 @@
     margin-bottom: 16px;
 
     &::before {
-      content: attr(data-title);
       position: absolute;
       top: -70px;
       left: 0;
       z-index: -1;
-      font-weight: 700;
       font-size: 9rem;
+      font-weight: 700;
       line-height: 1;
       color: var(--bg-main);
-      text-shadow: 0 -1px 0 #ffffff, 0 -1px 0 #ffffff, 0 1px 0 #ffffff,
-        0 1px 0 #ffffff, -1px 0 0 #ffffff, 1px 0 0 #ffffff, -1px 0 0 #ffffff,
-        1px 0 0 #ffffff, -1px -1px 0 #ffffff, 1px -1px 0 #ffffff,
-        -1px 1px 0 #ffffff, 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,
-        1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
+      text-shadow: 0 -1px 0 #fff, 0 -1px 0 #fff, 0 1px 0 #fff, 0 1px 0 #fff,
+        -1px 0 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 1px 0 0 #fff,
+        -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff,
+        -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+      content: attr(data-title);
     }
   }
 
   &__descr {
-    font: 300 1rem / 1.5 $second-font;
     margin-bottom: 16px;
+    font: 300 1rem / 1.5 $second-font;
   }
 
   &__link {
     font-size: 0.625rem;
     line-height: 2;
-    text-transform: uppercase;
     color: var(--primary-default);
+    text-transform: uppercase;
   }
 
   &__banner {
@@ -198,24 +199,23 @@
     &__title::before {
       top: -12px;
       font-size: 2.769rem;
-      text-shadow: 0 -0.28px 0 #ffffff, 0 -0.28px 0 #ffffff, 0 0.28px 0 #ffffff,
-        0 0.28px 0 #ffffff, -0.28px 0 0 #ffffff, 0.28px 0 0 #ffffff,
-        -0.28px 0 0 #ffffff, 0.28px 0 0 #ffffff, -0.28px -0.28px 0 #ffffff,
-        0.28px -0.28px 0 #ffffff, -0.28px 0.28px 0 #ffffff,
-        0.28px 0.28px 0 #ffffff, -0.28px -0.28px 0 #ffffff,
-        0.28px -0.28px 0 #ffffff, -0.28px 0.28px 0 #ffffff, 0.28px 0.28px 0 #fff;
+      text-shadow: 0 -0.28px 0 #fff, 0 -0.28px 0 #fff, 0 0.28px 0 #fff,
+        0 0.28px 0 #fff, -0.28px 0 0 #fff, 0.28px 0 0 #fff, -0.28px 0 0 #fff,
+        0.28px 0 0 #fff, -0.28px -0.28px 0 #fff, 0.28px -0.28px 0 #fff,
+        -0.28px 0.28px 0 #fff, 0.28px 0.28px 0 #fff, -0.28px -0.28px 0 #fff,
+        0.28px -0.28px 0 #fff, -0.28px 0.28px 0 #fff, 0.28px 0.28px 0 #fff;
     }
 
     &__descr {
-      font: 300 1rem / 1.5 $second-font;
       margin-bottom: 16px;
+      font: 300 1rem / 1.5 $second-font;
     }
 
     &__link {
       font-size: 0.625rem;
       line-height: 2;
-      text-transform: uppercase;
       color: var(--primary-default);
+      text-transform: uppercase;
     }
 
     &__banner {
