--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -2,18 +2,17 @@
   padding: 100px 0;
 
   &__decor-title {
-    font-weight: 700;
     font-size: 9rem;
+    font-weight: 700;
     line-height: 1.389;
-    text-transform: uppercase;
     // -webkit-text-stroke: 1px white;
     // -webkit-text-fill-color: transparent;
     color: var(--bg-main);
-    text-shadow: -0 -1px 0 #ffffff, 0 -1px 0 #ffffff, -0 1px 0 #ffffff,
-      0 1px 0 #ffffff, -1px -0 0 #ffffff, 1px -0 0 #ffffff, -1px 0 0 #ffffff,
-      1px 0 0 #ffffff, -1px -1px 0 #ffffff, 1px -1px 0 #ffffff,
-      -1px 1px 0 #ffffff, 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,
-      1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
+    text-shadow: -0 -1px 0 #fff, 0 -1px 0 #fff, -0 1px 0 #fff, 0 1px 0 #fff,
+      -1px -0 0 #fff, 1px -0 0 #fff, -1px 0 0 #fff, 1px 0 0 #fff,
+      -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff,
+      -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+    text-transform: uppercase;
 
     // &--top {
     // }
