--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,83 +1,79 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <title>{{ title }}</title>
+  </head>
 
-<head>
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <title>{{ title }}</title>
-</head>
+  <body>
+    <div class="content">
+      {{> sections/header }}
 
-<body>
-  <div class="content">
-    {{> sections/header }}
+      <main>
+        {{> sections/hero }}
+        {{> sections/offers }}
+        {{> sections/about }}
 
+        <!-- rooms -->
+        <section class="rooms">
+          <div class="container container--lg">
+            <div class="rooms__headline">
+              <h2> Номерной фонд </h2>
+              <a href="#"> Карта-схема фонда </a>
+            </div>
 
-    <main>
-
-      {{> sections/hero }}
-      {{> sections/offers }}
-      {{> sections/about }}
-
-      <!-- rooms -->
-      <section class="rooms">
-        <div class="container container--lg">
-          <div class="rooms__headline">
-            <h2>Номерной фонд</h2>
-            <a href="#">Карта-схема фонда</a>
-          </div>
-
-          <div class="rooms__wrapper">
-
-            <div class="card-room">
-              <div class="card-room__banner">
-                <div class="card-room__slider">
-                  <div class="swiper">
-
-                    <div class="swiper-wrapper">
-                      <div class="card-room__slide swiper-slide">
-                        <div class="card-room__photo-wrap">
-                          <picture class="card-room__photo">
-                            <!-- <source srcset="images/room-1.webp" /> -->
-                            <img src="../img/room-1.jpg" />
-                          </picture>
+            <div class="rooms__wrapper">
+              <div class="card-room">
+                <div class="card-room__banner">
+                  <div class="card-room__slider">
+                    <div class="swiper">
+                      <div class="swiper-wrapper">
+                        <div class="card-room__slide swiper-slide">
+                          <div class="card-room__photo-wrap">
+                            <picture class="card-room__photo">
+                              <!-- <source srcset="images/room-1.webp" /> -->
+                              <img src="../img/room-1.jpg" />
+                            </picture>
+                          </div>
                         </div>
                       </div>
-
                     </div>
                   </div>
-
                 </div>
+
+                <div class="card-room__content">
+                  <div class="card-room__info">
+                    <div class="card-room__title">
+                      Двухместный стандарт — 20 номеров в домах срубах
+                    </div>
+                    <a href="#" class="card-room__link"> Показать на карте </a>
+                  </div>
+
+                  <div class="card-room__total">
+                    <div class="card-room__price"> от 2 390 ₽ </div>
+                    <button class="card-room__button button">
+                      Забронировать
+                    </button>
+                  </div>
+                </div>
+                <!-- End card-room__content -->
               </div>
-
-              <div class="card-room__content">
-
-                <div class="card-room__info">
-                  <div class="card-room__title">Двухместный стандарт — 20 номеров в домах срубах</div>
-                  <a href="#" class="card-room__link">Показать на карте</a>
-                </div>
-
-                <div class="card-room__total">
-                  <div class="card-room__price">от 2 390 ₽</div>
-                  <button class="card-room__button button">Забронировать</button>
-                </div>
-              </div>
-              <!-- End card-room__content -->
-
+              <!-- End card-room -->
             </div>
-            <!-- End card-room -->
-
           </div>
-        </div> <!-- ./ End of container -->
-      </section> <!-- ./ End of rooms -->
+          <!-- ./ End of container -->
+        </section>
+        <!-- ./ End of rooms -->
 
-      {{> sections/services }}
+        {{> sections/services }}
+      </main>
 
-    </main>
-
-    {{> sections/footer }}
-  </div>
-</body>
-
+      {{> sections/footer }}
+    </div>
+  </body>
 </html>
