--- a/src/scss/variables/UI.scss
+++ b/src/scss/variables/UI.scss
@@ -36,6 +36,7 @@ button {
   color: var(--color);
   text-align: center;
   text-decoration: none;
+  text-transform: uppercase;
   // letter-spacing: -0.02em;
   letter-spacing: 0;
   cursor: pointer;
