--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -9,10 +9,10 @@ $accent: #2d376a;
 $green: #008000;
 
 $primary-default: #3d6d8f;
-$primary-hover: #4c728d;
-$primary-active: #326183;
+$primary-hover: #19486a;
+$primary-active: #19486a;
 $primary-disable: #5d7586;
-$primary-gradient: linear-gradient(180deg, #9975ff 0%, #6332f0 100%);
+$primary-gradient: linear-gradient(180deg, #3d6d8f 0%, #19486a 100%);
 $secondary-1: #f4f7fe;
 $secondary-2: #e1e9f8;
 $secondary-3: #c9d4ea;
@@ -126,8 +126,8 @@ $button-font-weight: normal;
 $button-line-height: 1.667;
 $button-border-width: 0;
 $button-border-radius: 25px;
-$button-padding: 12px 2.667em;
-$button-padding-sm: 9px 1.5em;
+$button-padding: 12px 2.695em;
+$button-padding-sm: 12px 2.695em;
 $button-min-width: auto;
 $button-margin: 5px;
 
