--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -1,5 +1,15 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: 10;
+  width: 100%;
+  transition: background-color 0.2s ease;
+
+  &.fixed,
+  &.active {
+    background-color: var(--white);
+  }
 
   &__wrap {
     display: flex;
@@ -8,66 +18,63 @@
   }
 
   &__logo {
+    display: inline-flex;
+    align-items: center;
+    width: 100%;
+    max-width: 181px;
+    height: 48px;
+    margin: 12px 0;
     transition: opacity 0.2s;
+
+    @include max-width(1440px) {
+      max-width: 144px;
+    }
+
+    @include max-width($tablet) {
+      width: 155px;
+      max-width: 155px;
+      height: 40px;
+      margin: 4px 0;
+    }
 
     &:hover {
       opacity: 0.8;
     }
+
+    img {
+      max-height: 100%;
+      object-fit: contain;
+    }
+  }
+
+  &__left {
+    display: inline-flex;
   }
 
   &__content {
-    @include max-width(992px) {
+    @include max-width($tablet) {
       display: none;
-
-      &.active {
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: flex-end;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-      }
     }
   }
 
   &__inner {
     display: flex;
-    align-items: center;
-
-    @include max-width(992px) {
-      position: relative;
-      display: block;
-      width: 100%;
-      max-width: 400px;
-      height: 100%;
-      padding: 50px;
-      background-color: var(--white);
-    }
-  }
-
-  &__toggle {
-    position: relative;
-    z-index: 10;
-    display: none;
-
-    @include max-width(992px) {
-      display: block;
-    }
-
-    svg {
-      width: 20px;
-      height: 20px;
-    }
   }
 
   &__nav {
-    margin-right: 164px;
-    margin-left: auto;
+    // margin-right: 164px;
+    margin-left: 4.1875rem;
 
-    @include max-width(992px) {
-      margin: 0 0 30px 0;
+    @include max-width(1440px) {
+      margin-left: 2rem;
+    }
+
+    @include max-width(1300px) {
+      margin-left: 1rem;
+    }
+
+    @include max-width($tablet) {
+      display: none;
     }
   }
 
@@ -75,9 +82,8 @@
     display: flex;
     align-items: center;
 
-    @include max-width(992px) {
-      flex-direction: column;
-      align-items: flex-start;
+    > .button {
+      margin: 0;
     }
   }
 
@@ -85,37 +91,61 @@
     display: flex;
     align-items: center;
     margin-right: 40px;
+
+    @include max-width(1300px) {
+      margin-right: 20px;
+    }
   }
 
   &__social {
     display: inline-flex;
+    align-items: baseline;
+    font-size: 12px;
+    line-height: 1.333;
 
     &:not(:last-child) {
       margin-right: 28px;
+
+      @include max-width(1300px) {
+        margin-right: 14px;
+      }
     }
 
     svg {
-      width: 16px;
-      height: 16px;
       margin-right: 4px;
+      font-size: 16px;
+      transform: translateY(2px);
+
+      @include max-width(1300px) {
+        margin-right: 0;
+        transform: none;
+      }
     }
 
     span {
-      font-size: 0.75rem;
-      line-height: 1.333;
+      @include max-width(1300px) {
+        display: none;
+      }
     }
   }
 
   &__phone {
     margin-right: 32px;
 
+    @include max-width(1300px) {
+      margin-right: 20px;
+    }
+
     a {
-      font-size: 0.875rem;
+      font-size: 14px;
       font-weight: 600;
       line-height: 1.429;
       color: var(--black);
       text-transform: uppercase;
-      transition: color 0.2s ease;
+
+      &:hover {
+        color: var(--primary-hover);
+      }
     }
 
     span {
@@ -135,42 +165,116 @@
 .header-nav {
   &__list {
     display: flex;
-    align-items: flex-start;
+    height: 100%;
   }
 
   &__item {
     &:not(:last-child) {
-      margin-right: 32px;
+      margin-right: 2rem;
+
+      @include max-width(1440px) {
+        margin-right: 1rem;
+      }
     }
   }
 
   &__link {
-    font-size: 0.75rem;
-    line-height: 1.667;
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: 1.625rem 0;
+    font-size: 12px;
+    line-height: 1.66666666;
     color: var(--black);
     text-transform: uppercase;
-    transition: color 0.2s ease;
 
     &:hover {
-      color: $primary-active;
-    }
-  }
+      color: var(--primary-default);
 
-  @include max-width(992px) {
-    &__list {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
-    &__item {
-      &:not(:last-child) {
-        margin-right: 0;
-        margin-bottom: 10px;
+      &::before {
+        transform: none;
       }
     }
 
-    &__link {
-      font-size: 1rem;
+    &::before {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      content: '';
+      background-color: currentColor;
+      transition: transform 0.2s ease;
+      transform: scaleX(0);
+      transform-origin: center;
+    }
+  }
+}
+
+// hamburger
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  width: 1em;
+  min-width: 1em;
+  height: 1em;
+  min-height: 1em;
+  padding: 0;
+  margin: 8px 4px 8px auto;
+  font-size: 32px;
+  color: var(--main-color);
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  appearance: none;
+
+  @include max-width($tablet) {
+    display: inline-flex;
+  }
+
+  @media (hover) {
+    &:hover {
+      color: var(--primary-hover);
+    }
+  }
+
+  &.active,
+  .active & {
+    > i {
+      &:nth-child(1) {
+        transform: translate(0, 8px) rotate(-45deg);
+      }
+
+      &:nth-child(2) {
+        visibility: hidden;
+        opacity: 0;
+        transform: translateX(50%);
+      }
+
+      &:nth-child(3) {
+        width: 1em;
+        transform: translate(0, -8px) rotate(45deg);
+      }
+    }
+  }
+
+  > i {
+    display: block;
+    width: 1em;
+    height: 2px;
+    margin: 3px 0;
+    background-color: currentColor;
+    border-radius: 2px;
+    transition: background-color 0.2s ease, transform 0.2s ease,
+      opacity 0.2s ease, visibility 0.2s ease, width 0.2s ease;
+
+    &:last-of-type {
+      width: 0.75em;
+      margin-left: auto;
     }
   }
 }
