--- a/src/scss/variables/typography.scss
+++ b/src/scss/variables/typography.scss
@@ -3,6 +3,7 @@ html {
   font-size: 16px;
   line-height: 1.3;
   color: var(--main-color);
+  background-color: var(--bg-color);
 
   @include max-width($desktop-sm) {
     font-size: 15px;
@@ -10,10 +11,6 @@ html {
 
   @include max-width($tablet) {
     font-size: 14px;
-  }
-
-  @include max-width($phone) {
-    font-size: 13px;
   }
 }
 
