--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,6 +13,8 @@
   <body>
     <div class="content">
       {{> sections/header }}
+      <!--  -->
+      {{> sections/menu }}
 
       <main>
         {{> sections/hero }}
