--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -24,6 +24,7 @@
 
 // Sections - Секции
 @import 'sections/header';
+@import 'sections/menu';
 @import 'sections/footer';
 @import 'sections/hero';
 @import 'sections/offers';
